# datadog-cli

./: Cargo.toml  README.md
.claude/skills/datadog-ci/: SKILL.md
.claude/skills/datadog-events/: SKILL.md
.claude/skills/datadog-logs/: SKILL.md
.claude/skills/datadog-metrics/: SKILL.md
.claude/skills/datadog-monitors/: SKILL.md
.claude/skills/datadog-notebooks/: SKILL.md
.claude/skills/datadog-unfurl/: SKILL.md
datadog/: Cargo.toml  README.md
datadog-logs/: Cargo.toml  README.md
datadog-logs/src/: main.rs
datadog-utils/: BUILD.bazel  Cargo.toml  README.md  maintainers.yml
datadog-utils/src/: lib.rs  maintainers.yml  query.rs  time_range.rs
datadog/src/: main.rs
datadog/src/ci/: api.rs  mod.rs
datadog/src/dashboard/: api.rs  mod.rs
datadog/src/events/: api.rs  mod.rs
datadog/src/metrics/: api.rs  mod.rs
datadog/src/monitors/: api.rs  mod.rs
datadog/src/notebooks/: api.rs  cells.rs  dd-notebook-enhance.js  mod.rs  parser.rs
