[package]
authors = ["Darren Tsung <dtsung@figma.com>"]
edition = "2018"
name = "datadog"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0"
chrono = {version = "0.4", features = ["serde"]}
datadog-api-client = "0.27.0"
reqwest = {version = "0.11.27", features = ["json"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
tokio = {version = "~1.46", features = ["full"]}
url = "2"

datadog_utils = {path = "../datadog-utils"}
